<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/contact_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nome"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/contact_dialog_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_padding"
        android:textColorHint="@color/colorPrimary">

        <EditText
            android:id="@+id/contact_dialog_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Telefone"
            android:inputType="phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/contact_dialog_progress"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:padding="@dimen/normal_padding"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>