<resources>
    <string name="app_name">Zap Imóveis</string>

    <string name="imovel_price">R$%1$s,00</string>
    <string name="imovel_address">%1$s • %2$s</string>
    <string name="imovel_total_area">%1$s m2</string>
    <string name="imovel_dorms">%1$s Dorms.</string>
    <string name="generic_error">Ocorreu um erro.</string>
    <string name="load_page_error">Ocorreu um erro ao tentar carregar a página.</string>
    <string name="imovel_item_image_description">Imovel image</string>
    <string name="imovel_details_image_description">Imovel image</string>
    <string name="snackbar_try_again">Tentar Novamente</string>
    <string name="message_sent">Sua mensagem foi enviada.</string>
    <string name="message_not_sent">Não conseguimos enviar sua mensagem, tente novamente.</string>
    <string name="dialog_close">Fechar</string>
    <string name="dialog_send">Enviar</string>
    <string name="text_is_mandatory">Este campo é obrigatório.</string>
    <string name="invalid_email">Email inválido</string>
    <string name="generic_error_verbose_text">Verifique sua internet e tente novamente mais tarde.</string>
</resources>
