<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_horizontal"
    android:transitionName="imovel_image_transition">

    <android.support.v4.view.ViewPager
        android:id="@+id/fragment_imovel_details_toolbar_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/fragment_imovel_details_toolbar_indicator"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:padding="@dimen/normal_padding"/>
</FrameLayout>