<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:contentDescription="fragment_imovel_root_layout">

    <include
        android:id="@+id/no_error_view"
        layout="@layout/view_error"
        android:visibility="gone"
        tools:visibility="visible"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/fragment_imovel_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/fragment_imovel_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_imovel_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/normal_padding"
            android:paddingTop="@dimen/normal_padding"
            tools:listitem="@layout/imovel_item">

        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>